--- a/teaching/23S-5218/presentation_schedule.htm
+++ b/teaching/23S-5218/presentation_schedule.htm
@@ -31,12 +31,12 @@ div img:hover{
 	
 	
 	
-    <font size="5"><center><b>CSCE 5218 & 4930 – Deep Learning</b></center></font>
+    <font size="5"><center><b>CSCE 5218 – Deep Learning</b></center></font>
 
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2022</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2023</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -59,7 +59,7 @@ div img:hover{
 			
 			<br>
 			
-			<font size="4"> A1: Your presentation should be around 14 minutes (10 minutes for project presentation + 4-minutes question-answering). I will count the time during your presentation. You have to finish your presentation within required time. </font>
+			<font size="4"> A1: Your presentation should be around 12-15 minutes (10 minutes for project presentation + 2-5 for minutes question-answering). I will count the time during your presentation. You have to finish your presentation within required time. </font>
 			
 			<br> <br>
 			
@@ -93,7 +93,7 @@ div img:hover{
 			
 			<br>
 			
-			<font size="4"> A4: Yes. You're encouraged to use your own laptop for presentation. Many adapters are provided. You can also copy your slide to the computer in the classroom for presentation. Remember to name your slide with your project name if you do so.</font>
+			<font size="4"> A4: Yes. You're encouraged to use your own laptop for presentation. You can also copy your slide to the computer in the classroom for presentation. Remember to name your slide with your project name if you do so.</font>
 		</li>
 		<br>
 		<li>
@@ -110,6 +110,14 @@ div img:hover{
 			<br>
 			
 			<font size="4"> A6: That depends. Generally, for a 10-minutes presentation, 15 pages are appropriate for the slide. But it's up to you and your presentation content.</font>
+		</li>
+		<br>
+		<li>
+			<font size="4"> <b>Q7: What do I look at for the presentation?</b></font>
+			
+			<br>
+			
+			<font size="4"> A7: A good presentation should be clear with compact slides. Background, motivation and differences from previous works should be discussed. Figures and texts should be appropriately arranged. The presenter(s) should be able to fluently present the content and answer questions from the audiences.</font>
 		</li>
 	</ul>
 	</p>
@@ -134,37 +142,37 @@ div img:hover{
 		</tr> 
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/21 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
 			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Ryan Sterzenbach, <br> Bailu Zhang </font>
+				Ernest Cubit, <br> Samir Tarda, <br> Syed Ali </font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> RoBERTa  for Tweet ADE Classification </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Satellite Imagery for Solar Farm Detection and Growth </font></td>
 		</tr>
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/21 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
 			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Asher Pranay Palle, <br> Sai Pranathi Karedla </font>
+				Manish Vemulapalli </font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Hand Gesture Human-Computer interaction </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Automatic Speech Recognition Systems in School </font></td>
 		</tr>
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/21 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
 			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Blessy Kuriakose, <br> Harsha Vardhan Gangineni, <br> Nikhil Reddy Vemireddy </font>
+				Gayathri Katkojwala, <br>Sai Nikhil Kotte </font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> American Sign Language Translation </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> U-Net image segmentation using Deep learning techniques </font></td>
 		</tr>
 		<tr>
-			<td width=100 style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/21 </font></td>
-			<td width=500  style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Xiaoqiong Liu </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> "Contradictory, My Dear Watson" - how two sentences are related</font></td>
+			<td width=100 style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
+			<td width=500  style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Pradhyumna Poralla, <br> Bharath Posa, <br> Ikshwak Varma Alluri </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sounds of Birds: Developing Deep Learning Models for Accurate Bird Species Identification through Vocalizations</font></td>
 		</tr>
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/21 </font></td>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
 			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Divyaben Ghinaiya </font>
+				Jashia Mitayeegiri, <br> Rahul Siddartha Gotti </font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Crops Damage Assessment with deep learning model </font></td>
+			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Image Caption Genereation </font></td>
 		</tr>
 		
 		
@@ -172,67 +180,51 @@ div img:hover{
 		
 		
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/26 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Casey Easter, <br> Blake Fuller </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Evaluating Depth Estimation Networks for Vision-Based Object Avoidance</font></td>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Shaohua Dong </font></td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Edge-Aware Guidance Fusion Network for RGB–Thermal Scene Parsing</font></td>
 		</tr>
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/26 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Nghia Dang, <br> Thanh Le, <br> Truc Nguyen </font></td>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Bhargavi Kondaveeti, <br> Rushitha Chalamalasetty, <br> Mounish Seeni </font></td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Plastic bottle and Can classifier</font></td>
 		</tr>
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/26 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sabitha Mankena, <br> Naveen Raja Yalagandula, <br> Deepa Murugesan  </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Emojify i.e creating our own emoji using deep learning </font></td>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Ikshwak Varma Alluri, <br> Pradhyumna Porlla, <br> Bharath Posa  </font></td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> na </font></td>
 		</tr>
 		<tr>
-			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/26 </font></td>
+			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
 			<td width=500 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Caleb Yost, <br> Stephanie Brooks, <br> Anish Sah </font>
+				sri ram relangi, <br> shanmukh datta Koganti, <br> Lakshme Prasaad Reddy Nandi </font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Animal Classification Using Deep Learning </font></td>
-		</tr>
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/26 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Riyad Bin Rafiq, <br>Areefa Patwary, <br>Shoham Weiss </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Brain tumor classification using Deep Learning</font></td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> na  </font></td>
 		</tr>
 		
 		
 		
 		
 		
-		
 		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/28 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Pranathi Vasireddy </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> AI Poesy</font></td>
+			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/27 </font></td>
+			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Yeshwanth Pulapa </font></td>
+			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> sentence word predictor </font></td>
 		</tr>
 		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/28 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Ibrahim Alkiwaifi, <br>Sweety Makwana  </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Image Classification of Natural Scenes</font></td>
+			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/27 </font></td>
+			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Mayur Vora, <br> Keya shah, <br> Twumasi Boatneg  </font></td>
+			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Image recognition with deep learning techniques</font></td>
 		</tr>
 		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/28 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Kishen Patel, <br>MD Abdullah Forhad, <br>Jibril moalim </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Phantom tumor tracking using deep learning model</font></td>
+			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/27 </font></td>
+			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Justin Garrigus </font></td>
+			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Neural Turing Machine: Logic Gating</font></td>
 		</tr>
 		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/28 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Bryan Adams, <br>Suman Pandey, <br>Rajesh Nemani </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Real-time object detection using YOLO</font></td>
-		</tr>
-		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/28 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Mittalben Jay Bhatiya, <br>Sonali Margaret Rozario </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Fake News Detection </font></td>
-		</tr>
-		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/28 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Gokilavani Sagadevan, <br> Priyanka kare, <br>Pujah Balasubramaniam  </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Automatic Text Generation  </font></td>
+			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/27 </font></td>
+			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Venkata Kovvuri, LakshmanKumar Puppala, Harshavardhan Aila </font></td>
+			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Text Summarisation using Deep Learning</font></td>
 		</tr>
 		
 		
