--- a/teaching/23S-5218/presentation_schedule.htm
+++ b/teaching/23S-5218/presentation_schedule.htm
@@ -186,6 +186,11 @@ div img:hover{
 		</tr>
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Blake Fuller </font></td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Robotic Arm Reinforcement Learning</font></td>
+		</tr>
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
 			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Bhargavi Kondaveeti, <br> Rushitha Chalamalasetty, <br> Mounish Seeni </font></td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Plastic bottle and Can classifier</font></td>
 		</tr>
