--- a/teaching/23S-5218/presentation_schedule.htm
+++ b/teaching/23S-5218/presentation_schedule.htm
@@ -192,7 +192,7 @@ div img:hover{
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
 			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Bhargavi Kondaveeti, <br> Rushitha Chalamalasetty, <br> Mounish Seeni </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Plastic bottle and Can classifier</font></td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sign Language Detection</font></td>
 		</tr>
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
