--- a/teaching/23S-5218/index.htm
+++ b/teaching/23S-5218/index.htm
@@ -607,7 +607,7 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <a href="https://papers.nips.cc/paper/2014/hash/5ca3e9b122f61f8f06494c97b1afccf3-Abstract.html" target="_blank"><font color="#0099ff">Ref 1</font></a>, <a href="https://proceedings.neurips.cc/paper/2016/file/a486cd07e4ac3d270571622f4f316ec5-Paper.pdf" target="_blank"><font color="#0099ff">Ref 2</font></a>, <a href="https://openaccess.thecvf.com/content_ECCV_2018/papers/Lisa_Anne_Hendricks_Women_also_Snowboard_ECCV_2018_paper.pdf" target="_blank"><font color="#0099ff">Ref 3</font></a> </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> Presentation schedule out</font> </font></td>
 		</tr>
 
 		<tr>
