--- a/teaching/23S-5218/presentation_schedule.htm
+++ b/teaching/23S-5218/presentation_schedule.htm
@@ -163,17 +163,13 @@ div img:hover{
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> U-Net image segmentation using Deep learning techniques </font></td>
 		</tr>
 		<tr>
-			<td width=100 style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
-			<td width=500  style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Pradhyumna Poralla, <br> Bharath Posa, <br> Ikshwak Varma Alluri </font></td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sounds of Birds: Developing Deep Learning Models for Accurate Bird Species Identification through Vocalizations</font></td>
-		</tr>
-		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
 			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Jashia Mitayeegiri, <br> Rahul Siddartha Gotti </font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Image Caption Genereation </font></td>
 		</tr>
+		
 		
 		
 		
@@ -200,6 +196,11 @@ div img:hover{
 				sri ram relangi, <br> shanmukh datta Koganti, <br> Lakshme Prasaad Reddy Nandi </font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> na  </font></td>
+		</tr>
+		<tr>
+			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Pradhyumna Poralla, <br> Bharath Posa, <br> Ikshwak Varma Alluri </font></td>
+			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sounds of Birds: Developing Deep Learning Models for Accurate Bird Species Identification through Vocalizations</font></td>
 		</tr>
 		
 		
