--- a/teaching/23S-5218/course_project.htm
+++ b/teaching/23S-5218/course_project.htm
@@ -181,7 +181,7 @@ div img:hover{
 	</p>
 	
 	<p style="text-align:justify">
-	<font size="4">Please follow <a href="https://cvpr2022.thecvf.com/sites/default/files/2021-10/cvpr2022-author_kit-v1_1-1.zip" target="_blank"><font color="#0099ff">CVPR (latex)</font></a> to format your proposal and final report. The proposal and the final report should have strictly 4 and 8 pages, respectively, excluding references.
+	<font size="4">Please follow <a href="https://cvpr2022.thecvf.com/sites/default/files/2021-10/cvpr2022-author_kit-v1_1-1.zip" target="_blank"><font color="#0099ff">CVPR (latex)</font></a> to format your proposal and final report. The proposal and the final report should have strictly up to 4 and 8 pages, respectively, excluding references.
 	
 	<br>
 	<br>
