--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR>
 	-->
-	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> Please read <a href="./prospective-students.html" target="_blank"><font><font color="#0099ff">HERE</font></font></a>.</font>
+	<!-- <font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> Please read <a href="./prospective-students.html" target="_blank"><font><font color="#0099ff">HERE</font></font></a>.</font>
 	
-	<HR>
+	<HR> -->
 	
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
