--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@
 
 	<table border=0 cellpadding=4>
 
-		<!-- <tr>
+		 <tr>
 			<td><img src="./publication/semo.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -50,7 +50,23 @@
 					<br>
 				</p>
 			</td>
-		</tr> -->
+		</tr>
+
+		<tr>
+			<td><img src="./publication/cctv.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">CCTV-Gun: Benchmarking Handgun Detection in CCTV Images</font>
+					<br>
+					<font color="#000000" >S. Yellapragada, Z. Li, K. Doshi, P. Mhasakar, H. Fan, J. Wei, E. Blasch, and H. Ling</font>
+					<br>
+					<font>arXiv:2303.10703, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2303.10703" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/srikarym/CCTV-Gun" target="_blank"><font color="#0099ff">code</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
 
 		<tr>
 			<td><img src="./publication/planartrack.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
