--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">CCTV-Gun: Benchmarking Handgun Detection in CCTV Images</font>
 					<br>
-					<font color="#000000" >S. Yellapragada, Z. Li, K. Doshi, P. Mhasakar, H. Fan, J. Wei, E. Blasch, and H. Ling</font>
+					<font color="#000000" >S. Yellapragada*, Z. Li*, K. Doshi, P. Mhasakar, H. Fan, J. Wei, E. Blasch, and H. Ling (*equal contribution)</font>
 					<br>
 					<font>arXiv:2303.10703, 2023. </font>
 					<br>
