--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 5218/4930, Deep Learning, Spring 2022, Spring 2023 [<a href="https://hengfan2010.github.io/teaching/23S-5218/index.htm" target="_blank"><font color="#0099ff">course website</font></a>].
+				CSCE 5218/4930, Deep Learning, Spring 2022, Spring 2023.
 				<br>
 			</p>
 		</li>
@@ -49,6 +49,8 @@
 	
 	<!--
 	
+	[<a href="https://hengfan2010.github.io/teaching/23S-5218/index.htm" target="_blank"><font color="#0099ff">course website</font></a>]
+
 	<font size="4" color="#034f84"><b>Department of Computer Science, Stony Brook University</b></font>
 	<br>
 	
