--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Release MaGIC (<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://yeates.github.io/MaGIC-Page/" target="_blank"><font><font color="#0099ff">project</font></font></a>) for universal multi-modal image completion and generation.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Release MaGIC (<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/project coming soon) for universal multi-modal image completion and generation.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-03:</font> Check out PlanarTrack  (<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font><font color="#0099ff">project</font></font></a>) for large-scale challenging planar object tracking.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-02:</font> A paper on visual object tracking is accepted to The Innovation.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-01:</font> Welcome PhD student Shaohua Dong to join our team.</li>
