--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	
     <font size="4" color="#034f84"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision, robotics, and medical image analysis. He has served as Area Chairs for WACV 2022 and WACV 2023.
+    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#0099ff">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#0099ff">University of North Texas</font></a>. He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#0099ff">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision, robotics, and medical image analysis. He has served as Area Chairs for WACV 2022-2024.
     
 	<HR>
 	
@@ -80,6 +80,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Appointed as an Area Chair for <a href="https://wacv2024.thecvf.com/" target="_blank"><font><font color="#0099ff">WACV 2024</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Release MaGIC (<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="http://www.yongshengyu.com/MaGIC-Page/" target="_blank"><font><font color="#0099ff">project</font></font></a>) for multi-modality guided image completion and generation.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-03:</font> Check out PlanarTrack  (<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font><font color="#0099ff">project</font></font></a>) for large-scale challenging planar object tracking.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-02:</font> A paper on visual object tracking is accepted to The Innovation.</li>
