--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR> -->
 
-	<font size="3" color="red"><b>Postdoctoral positions:</b></font> <font size="3"> Several postdoctoral openings are available. 
+	<!-- <font size="3" color="red"><b>Postdoctoral positions:</b></font> <font size="3"> Several postdoctoral openings are available. 
 		The general areas of interests include deep learning, spatial intelligence, mobile computing, and robotic coordination. 
 		Check out <a href="https://jobs.untsystem.edu/postings/71770" target="_blank"><font><font color="#0099ff">HERE</font></font></a>.</font>
 	
-	<HR> 
+	<HR>  -->
 	
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
