--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2023-07:</font> Four papers (pdf/code, pdf/data-code, pdf/code, pdf/code) are accepted to <a href="https://iccv2023.thecvf.com/" target="_blank"><font><font color="#0099ff">ICCV 2023</font></font></a>.</li>
+		<!-- <li><font style="font-weight:bold; line-height: 120%">2023-07:</font> Four papers (pdf/code, pdf/data-code, pdf/code, pdf/code) are accepted to <a href="https://iccv2023.thecvf.com/" target="_blank"><font><font color="#0099ff">ICCV 2023</font></font></a>.</li> -->
 		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Appointed as an Area Chair for <a href="https://wacv2024.thecvf.com/" target="_blank"><font><font color="#0099ff">WACV 2024</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Release MaGIC (<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/yeates/MaGIC" target="_blank"><font><font color="#0099ff">code</font></font></a>) for multi-modality guided image completion and generation.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-03:</font> Check out PlanarTrack  (<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font><font color="#0099ff">project</font></font></a>) for large-scale challenging planar object tracking.</li>
