--- a/publications.html
+++ b/publications.html
@@ -67,22 +67,6 @@
 				</p>
 			</td>
 		</tr> -->
-
-		<tr>
-			<td><img src="./publication/planartrack.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">PlanarTrack: A Large-scale Challenging Benchmark for Planar Object Tracking</font>
-					<br>
-					<font color="#000000" >X. Liu*, X. Liu*, Z. Yi*, X. Zhou*, T. Le, L. Zhang, Y. Huang, Q. Yang, and H. Fan (*equal contribution)</font>
-					<br>
-					<font>	arXiv:2303.07625, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font color="#0099ff">project</font></a>
-					<br>
-				</p>
-			</td>
-		</tr>
 		
 		<tr>
 			<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -110,7 +94,7 @@
 					<br>
 					<font>	arXiv:2211.10763, 2022. </font>
 					<br>
-					<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">code and data (coming soon)</font></a>
+					<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/lutao2021/PIDray" target="_blank"><font color="#0099ff">code-data</font></a>
 					<br>
 				</p>
 			</td>
@@ -122,22 +106,6 @@
 	<br>
 
 	<table border=0 cellpadding=4>
-			
-		<tr>
-			<td><img src="./publication/vot.png", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Visual Object Tracking: Progress, Challenge, and Future</font>
-					<br>
-					<font color="#000000">L. Zhang and H. Fan</font>
-					<br>
-					<font>The Innovation, 4(2), 100402, 2023. (Invited)</font>
-					<br>
-					<a href="https://www.cell.com/the-innovation/fulltext/S2666-6758(23)00030-9" target="_blank"><font color="#0099ff">paper</font></a>
-					<br>
-				</p>
-			</td>
-		</tr>
 
 		<tr>
 			<td><img src="./publication/animaltrack.gif", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -153,6 +121,22 @@
 					<br>
 				</p>
 			
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/vot.png", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Visual Object Tracking: Progress, Challenge, and Future</font>
+					<br>
+					<font color="#000000">L. Zhang and H. Fan</font>
+					<br>
+					<font>The Innovation, 4(2), 100402, 2023. (Invited)</font>
+					<br>
+					<a href="https://www.cell.com/the-innovation/fulltext/S2666-6758(23)00030-9" target="_blank"><font color="#0099ff">paper</font></a>
+					<br>
+				</p>
 			</td>
 		</tr>
 
@@ -324,6 +308,70 @@
 
 
 	<table border=0 cellpadding=4>
+
+		<tr>
+			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Unsupervised Domain Adaptive Detection with Network Stability Analysis</font>
+					<br>
+					<font color="#000000" >W. Zhou*, H. Fan*, and L. Zhang (*equal contribution)</font>
+					<br>
+					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
+					<br>
+					paper &nbsp; code
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold"> Two Birds, One Stone: A Unified Framework for Joint Learning of Image and Video Style Transfers</font>
+					<br>
+					<font color="#000000" >B. Gu, H. Fan, and L. Zhang</font>
+					<br>
+					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
+					<br>
+					paper &nbsp; code
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Accurate and Fast Compressed Video Captioning</font>
+					<br>
+					<font color="#000000" >Y. Shen, X. Gu, K. Xu, H. Fan, L. Wen, and L. Zhang</font>
+					<br>
+					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
+					<br>
+					paper &nbsp; code
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/planartrack.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">PlanarTrack: A Large-scale Challenging Benchmark for Planar Object Tracking</font>
+					<br>
+					<font color="#000000" >X. Liu*, X. Liu*, Z. Yi*, X. Zhou*, T. Le, L. Zhang, Y. Huang, Q. Yang, and H. Fan (*equal contribution)</font>
+					<br>
+					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
+					<br>
+					<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font color="#0099ff">code-data</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
 			
 		<tr>
 			<td><img src="./publication/swintrack.png", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
