--- a/publications.html
+++ b/publications.html
@@ -315,7 +315,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Unsupervised Domain Adaptive Detection with Network Stability Analysis</font>
 					<br>
-					<font color="#000000" >W. Zhou*, H. Fan*, and L. Zhang (*equal contribution)</font>
+					<font color="#000000" >W. Zhou*, H. Fan*, T. Luo, and L. Zhang (*equal contribution)</font>
 					<br>
 					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
 					<br>
