--- a/service.html
+++ b/service.html
@@ -34,7 +34,7 @@
 	
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022, 2023
+				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022, 2023, 2024
 				<br>
 			</p>
 		</li>
