--- a/publications-year.html
+++ b/publications-year.html
@@ -29,7 +29,7 @@
 
 	<font size="3">For full publication list, please go to <a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>.</font>
 	<br>
-	<br>
+	<HR>
 	
 	<font size="4" color="#034f84"><b>Pre-prints</b></font>
 	<br>
@@ -47,38 +47,6 @@
 					<font>arXiv:2303.11243, 2023. </font>
 					<br>
 					<a href="https://arxiv.org/abs/2303.11243" target="_blank"><font color="#0099ff">paper</font></a>
-					<br>
-				</p>
-			</td>
-		</tr>
-
-		<tr>
-			<td><img src="./publication/cctv.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">CCTV-Gun: Benchmarking Handgun Detection in CCTV Images</font>
-					<br>
-					<font color="#000000" >S. Yellapragada*, Z. Li*, K. Doshi, P. Mhasakar, H. Fan, J. Wei, E. Blasch, and H. Ling (*equal contribution)</font>
-					<br>
-					<font>arXiv:2303.10703, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2303.10703" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/srikarym/CCTV-Gun" target="_blank"><font color="#0099ff">code</font></a>
-					<br>
-				</p>
-			</td>
-		</tr>
-
-		<tr>
-			<td><img src="./publication/planartrack.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">PlanarTrack: A Large-scale Challenging Benchmark for Planar Object Tracking</font>
-					<br>
-					<font color="#000000" >X. Liu*, X. Liu*, Z. Yi*, X. Zhou*, T. Le, L. Zhang, Y. Huang, Q. Yang, and H. Fan (*equal contribution)</font>
-					<br>
-					<font>	arXiv:2303.07625, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font color="#0099ff">project</font></a>
 					<br>
 				</p>
 			</td>
@@ -110,7 +78,7 @@
 					<br>
 					<font>	arXiv:2211.10763, 2022. </font>
 					<br>
-					<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="#" target="_blank"><font color="#0099ff">code and data (coming soon)</font></a>
+					<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/lutao2021/PIDray" target="_blank"><font color="#0099ff">code-data</font></a>
 					<br>
 				</p>
 			</td>
@@ -118,12 +86,77 @@
 	</table>
 
 
-	<br>
+	<HR>
 	<font size="4" color="#034f84"><b>2023</b></font>
 	<br>
 
 	<table border=0 cellpadding=4>
-			
+		
+		
+		<tr>
+			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Unsupervised Domain Adaptive Detection with Network Stability Analysis</font>
+					<br>
+					<font color="#000000" >W. Zhou*, H. Fan*, T. Luo, and L. Zhang (*equal contribution)</font>
+					<br>
+					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
+					<br>
+					paper &nbsp; code
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold"> Two Birds, One Stone: A Unified Framework for Joint Learning of Image and Video Style Transfers</font>
+					<br>
+					<font color="#000000" >B. Gu, H. Fan, and L. Zhang</font>
+					<br>
+					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
+					<br>
+					paper &nbsp; code
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Accurate and Fast Compressed Video Captioning</font>
+					<br>
+					<font color="#000000" >Y. Shen, X. Gu, K. Xu, H. Fan, L. Wen, and L. Zhang</font>
+					<br>
+					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
+					<br>
+					paper &nbsp; code
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/planartrack.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">PlanarTrack: A Large-scale Challenging Benchmark for Planar Object Tracking</font>
+					<br>
+					<font color="#000000" >X. Liu*, X. Liu*, Z. Yi*, X. Zhou*, T. Le, L. Zhang, Y. Huang, Q. Yang, and H. Fan (*equal contribution)</font>
+					<br>
+					<font>IEEE/CVF International Conference on Computer Vision (<b>ICCV</b>), 2023.</font>
+					<br>
+					<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font color="#0099ff">code-data</font></a>
+					<br>
+				</p>
+			</td>
+		</tr>
+
 		<tr>
 			<td><img src="./publication/animaltrack.gif", style="border-radius:5% 5% 5% 5%;border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
@@ -161,7 +194,7 @@
 
 
 
-	<br>
+	<HR>
 	<font size="4" color="#034f84"><b>2022</b></font>
 	<br>
 
@@ -287,7 +320,7 @@
 	</table>
 
 	
-	<br>
+	<HR>
 	<font size="4" color="#034f84"><b>2021</b></font>
 	<br>
 
@@ -410,7 +443,7 @@
 
 
 
-	<br>
+	<HR>
 	<font size="4" color="#034f84"><b>2020</b></font>
 	<br>
 
@@ -451,7 +484,7 @@
 	</table>
 
 
-	<br>
+	<HR>
 	<font size="4" color="#034f84"><b>2019</b></font>
 	<br>
 
@@ -556,7 +589,7 @@
 	</table>
 
 
-	<br>
+	<HR>
 	<font size="4" color="#034f84"><b>2018</b></font>
 	<br>
 
@@ -596,7 +629,7 @@
 
 	</table>
 
-	<br>
+	<HR>
 	<font size="4" color="#034f84"><b>2017</b></font>
 	<br>
 
@@ -668,7 +701,7 @@
 
 	</table>
 
-	<br>
+	<HR>
 	<font size="4" color="#034f84"><b>2016</b></font>
 
 
@@ -692,8 +725,7 @@
 
 	</table>
 
-	<br>
-
+	<HR>
 	<font size="4" color="#034f84"><b>PhD Dissertation</b></font>
 	<br>
 
