--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<!-- <li><font style="font-weight:bold; line-height: 120%">2023-08:</font> Our PIDray (<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/lutao2021/PIDray" target="_blank"><font><font color="#0099ff">code-data</font></font></a>) is accepted to IJCV.</li> -->
+		<li><font style="font-weight:bold; line-height: 120%">2023-07:</font> Our PIDray (<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/lutao2021/PIDray" target="_blank"><font><font color="#0099ff">code-data</font></font></a>) on prohibited item detection is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-07:</font> Four papers are accepted to <a href="https://iccv2023.thecvf.com/" target="_blank"><font><font color="#0099ff">ICCV 2023</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Appointed as an Area Chair for <a href="https://wacv2024.thecvf.com/" target="_blank"><font><font color="#0099ff">WACV 2024</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Release MaGIC (<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/yeates/MaGIC" target="_blank"><font><font color="#0099ff">code</font></font></a>) for multi-modality guided image completion and generation.</li>
